--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form>
       <input type="text" name="newtask" />
       <br />
-      <button id="saveBtn">保存</button>
+      <input type="button" id="saveBtn" value="保存" />
     </form>
   </div>
 </body>
