--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </ul>
   <div id="editArea">
     <form>
-      <input type="text" name="newtask" />
+      <input type="text" id="newtask" />
       <br />
       <input type="button" id="saveBtn" value="保存" />
     </form>
